--- a/src/sass/jquery.dialog.sass
+++ b/src/sass/jquery.dialog.sass
@@ -8,19 +8,20 @@
   -moz-box-shadow: $shadow
 
 div.dialog-container
-  width: 180px
+  min-width: 100px
   position: absolute
 
   div.content
-    @include round(10px)
+    @include round(5px)
     padding: 5px 10px
-    background-color: #efefef
-    border: 1px solid #AAACAD
+    background-color: #FAFAFA
+    border: 1px solid #B3B3B3
+    @include shadow(0px 0px 1px #333)
   div.tip
     position: absolute
     background-repeat:no-repeat
-    width: 13px
-    height: 12px
+    width: 9px
+    height: 9px
 
     &.below
       background-image: url(images/tip-top.png)
