--- a/src/sass/jquery.dialog.sass
+++ b/src/sass/jquery.dialog.sass
@@ -11,12 +11,18 @@ div.dialog-container
   min-width: 100px
   position: absolute
 
-  div.content
+  div.container
     @include round(5px)
     padding: 5px 10px
     background-color: #FAFAFA
     border: 1px solid #B3B3B3
     @include shadow(0px 0px 1px #333)
+    div.content
+    div.toolbar
+      margin-top: 5px
+      padding: 7px 0px
+      a
+        margin: 0px 5px
   div.tip
     position: absolute
     background-repeat:no-repeat
@@ -31,11 +37,5 @@ div.dialog-container
       background-position: bottom center
 
 
-  div.confirmation-dialog-content
+  div.container.confirm
     text-align: center
-    div.message
-      padding-bottom: 5px
-    div.toolbar
-      padding: 7px 0px
-      a
-        margin: 0px 5px
